--- a/index.html
+++ b/index.html
@@ -100,12 +100,16 @@
         transform: translate(0, -100px) scale(1);
         z-index: 4;
     }
-    70% {
+      20% {
         transform: translate(0, -150px) scale(1);
         z-index: 4;
     }
+    70% {
+        transform: translate(0, -200px) scale(1);
+        z-index: 4;
+    }
     100% {
-        transform: translate(0, -150px) scale(1.5);
+        transform: translate(0, -200px) scale(1.5);
         z-index: 4;
     }
 }
